--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 
 form.example input[type=text] {
-    width: 510px;
+    width: 490px;
     padding: 10px;
     font-size: 14px;
     border: 0px solid grey;
@@ -71,8 +71,19 @@ form.example::after {
     border-radius: 10px;
 }
 
+.message {
+    width: 100px;
+    background-color: #178fe1;
+    color: white;
+    padding: 10px;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
 .profile {
-    width: 110px;
+    width: 90px;
     background-color: #178fe1;
     color: white;
     padding: 10px;
@@ -95,7 +106,7 @@ form.example::after {
 
 /* Кнопка выпадающего списка */
 .dropbtn {
-    width: 140px;
+    width: 110px;
     background-color: #178fe1;
     color: white;
     padding: 10px;
